--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,3 @@
-
 html
    head
     title= title
@@ -16,7 +15,7 @@ html
 
     block content
         div#graph(style="width:600px;height:300px;")
-        script(type='text/javascript')
+        script(type='text/javascript').
           var socket = io.connect();           
           var chart = null;
           var actualDate = new Date();
